--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue": "^2.5.2",
     "vue-localstorage": "^0.5.0",
     "vue-router": "^3.0.1",
+    "vue-video-player": "^5.0.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
