--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "echarts": "^4.2.0-rc.1",
     "element-ui": "^2.4.6",
     "fastclick": "^1.0.6",
     "qs": "^6.5.1",
